<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/income"
                            android:scaleType="centerInside" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/income"
                            android:layout_weight="8"/>

                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                    >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:layout_centerInParent="true"
                         android:gravity="center"
                         android:weightSum="10">
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:background="@drawable/expense"
                             android:scaleType="fitCenter"
                             android:layout_weight="2"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="@string/expenses"
                             android:layout_weight="8"/>

                     </LinearLayout>
                 </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:weightSum="10">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/todo"
                            android:scaleType="fitCenter"
                            android:layout_weight="2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/todo"
                            android:layout_weight="8"/>

                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                 android:onClick="onProfileClicked">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:layout_centerInParent="true"
                         android:gravity="center"
                         android:weightSum="10">
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/profile"
                             android:scaleType="fitCenter"
                             android:layout_weight="2"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="@string/profile"
                             android:layout_weight="8"/>

                     </LinearLayout>
                 </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>